@@ -81,6 +81,10 @@ void ff_register_rtp_dynamic_payload_handlers(void)
     ff_register_dynamic_payload_handler(&ff_g726_24_dynamic_handler);
     ff_register_dynamic_payload_handler(&ff_g726_32_dynamic_handler);
     ff_register_dynamic_payload_handler(&ff_g726_40_dynamic_handler);
+    ff_register_dynamic_payload_handler(&ff_g726le_16_dynamic_handler);
+    ff_register_dynamic_payload_handler(&ff_g726le_24_dynamic_handler);
+    ff_register_dynamic_payload_handler(&ff_g726le_32_dynamic_handler);
+    ff_register_dynamic_payload_handler(&ff_g726le_40_dynamic_handler);
     ff_register_dynamic_payload_handler(&ff_h261_dynamic_handler);
     ff_register_dynamic_payload_handler(&ff_h263_1998_dynamic_handler);
     ff_register_dynamic_payload_handler(&ff_h263_2000_dynamic_handler);
